--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,32 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<GridPane alignment="center" gridLinesVisible="true" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <columnConstraints>
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+   </rowConstraints>
+   <children>
+      <Pane prefHeight="349.0" prefWidth="386.0">
+         <children>
+            <Button fx:id="CircleButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Circle" />
+            <Button fx:id="RectangleButton" layoutX="75.0" layoutY="14.0" mnemonicParsing="false" text="Rectangle" />
+            <Button fx:id="LineButton" layoutX="155.0" layoutY="14.0" mnemonicParsing="false" text="Line" />
+            <Button fx:id="PointButton" layoutX="210.0" layoutY="14.0" mnemonicParsing="false" text="Point" />
+            <Canvas height="258.0" layoutX="14.0" layoutY="53.0" width="249.0" />
+            <ChoiceBox layoutX="280.0" layoutY="53.0" prefHeight="25.0" prefWidth="32.0" />
+            <ColorPicker layoutX="280.0" layoutY="78.0" prefHeight="25.0" prefWidth="32.0" />
+         </children>
+      </Pane>
+   </children>
 </GridPane>
