Lagt till i Controller

--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -23,9 +23,9 @@
             <Button fx:id="RectangleButton" layoutX="75.0" layoutY="14.0" mnemonicParsing="false" text="Rectangle" />
             <Button fx:id="LineButton" layoutX="155.0" layoutY="14.0" mnemonicParsing="false" text="Line" />
             <Button fx:id="PointButton" layoutX="210.0" layoutY="14.0" mnemonicParsing="false" text="Point" />
-            <Canvas height="258.0" layoutX="14.0" layoutY="53.0" width="249.0" />
-            <ChoiceBox layoutX="280.0" layoutY="53.0" prefHeight="25.0" prefWidth="32.0" />
-            <ColorPicker layoutX="280.0" layoutY="78.0" prefHeight="25.0" prefWidth="32.0" />
+            <Canvas fx:id="Canvas" height="258.0" layoutX="14.0" layoutY="53.0" width="249.0" />
+            <ChoiceBox fx:id="Choicebox" layoutX="280.0" layoutY="53.0" prefHeight="25.0" prefWidth="32.0" />
+            <ColorPicker fx:id="ColorPicker" layoutX="280.0" layoutY="78.0" prefHeight="25.0" prefWidth="32.0" />
          </children>
       </Pane>
    </children>
