--- a/src/sample.fxml
+++ b/src/sample.fxml
@@ -2,33 +2,33 @@
 
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
    <children>
-      <GridPane alignment="center" gridLinesVisible="true" hgap="10" vgap="10">
+      <GridPane>
          <columnConstraints>
-            <ColumnConstraints />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Pane prefHeight="505.0" prefWidth="506.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+            <Pane prefHeight="480.0" prefWidth="800.0">
                <children>
                   <Button fx:id="CircleButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Circle" />
                   <Button fx:id="RectangleButton" layoutX="75.0" layoutY="14.0" mnemonicParsing="false" onAction="#RectangleAction" text="Rectangle" />
                   <Button fx:id="LineButton" layoutX="155.0" layoutY="14.0" mnemonicParsing="false" onAction="#LineButtonAction" text="Line" />
                   <Button fx:id="PointButton" layoutX="210.0" layoutY="14.0" mnemonicParsing="false" text="Point" />
-                  <Canvas fx:id="canvas" height="428.0" layoutX="14.0" layoutY="53.0" width="423.0" />
-                  <ChoiceBox fx:id="Choicebox" layoutX="440.0" layoutY="53.0" prefHeight="25.0" prefWidth="52.0" />
-                  <ColorPicker fx:id="ColorPicker" layoutX="440.0" layoutY="94.0" prefHeight="25.0" prefWidth="52.0" />
+                  <Canvas fx:id="canvas" height="413.0" layoutY="57.0" width="643.0" />
+                  <ColorPicker fx:id="ColorPicker" layoutX="650.0" layoutY="57.0" />
+                  <ComboBox layoutX="650.0" layoutY="101.0" prefHeight="25.0" prefWidth="128.0" />
                </children>
             </Pane>
          </children>
