--- a/src/sample.fxml
+++ b/src/sample.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
@@ -29,6 +30,7 @@
                   <Canvas fx:id="canvas" height="413.0" layoutY="57.0" width="643.0" />
                   <ColorPicker fx:id="ColorPicker" layoutX="650.0" layoutY="57.0" />
                   <ComboBox layoutX="650.0" layoutY="101.0" prefHeight="25.0" prefWidth="128.0" />
+                  <Slider layoutX="714.0" layoutY="157.0" orientation="VERTICAL" prefHeight="293.0" prefWidth="14.0" />
                </children>
             </Pane>
          </children>
