--- a/src/sample.fxml
+++ b/src/sample.fxml
@@ -4,6 +4,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -21,16 +24,30 @@
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Pane prefHeight="480.0" prefWidth="800.0">
+            <Pane prefHeight="478.0" prefWidth="838.0">
                <children>
-                  <Button fx:id="CircleButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Circle" />
-                  <Button fx:id="RectangleButton" layoutX="75.0" layoutY="14.0" mnemonicParsing="false" onAction="#RectangleAction" text="Rectangle" />
-                  <Button fx:id="LineButton" layoutX="155.0" layoutY="14.0" mnemonicParsing="false" onAction="#LineButtonAction" text="Line" />
-                  <Button fx:id="PointButton" layoutX="210.0" layoutY="14.0" mnemonicParsing="false" text="Point" />
-                  <Canvas fx:id="canvas" height="413.0" layoutY="57.0" width="643.0" />
-                  <ColorPicker fx:id="ColorPicker" layoutX="650.0" layoutY="57.0" />
-                  <ComboBox layoutX="650.0" layoutY="101.0" prefHeight="25.0" prefWidth="128.0" />
-                  <Slider layoutX="714.0" layoutY="157.0" orientation="VERTICAL" prefHeight="293.0" prefWidth="14.0" />
+                  <Canvas fx:id="canvas" height="413.0" layoutX="14.0" layoutY="47.0" width="643.0" />
+                  <ColorPicker fx:id="ColorPicker" layoutX="569.0" layoutY="22.0" />
+                  <ComboBox layoutX="699.0" layoutY="22.0" prefHeight="25.0" prefWidth="128.0" />
+                  <Slider layoutX="763.0" layoutY="159.0" orientation="VERTICAL" prefHeight="293.0" prefWidth="14.0" />
+                  <MenuBar layoutX="1.0" layoutY="22.0" prefHeight="25.0" prefWidth="568.0">
+                    <menus>
+                      <Menu mnemonicParsing="false" text="Arkiv">
+                        <items>
+                          <MenuItem mnemonicParsing="false" text="Close" />
+                        </items>
+                      </Menu>
+                      <Menu mnemonicParsing="false" text="Form">
+                        <items>
+                          <MenuItem mnemonicParsing="false" text="Ångra" />
+                          <MenuItem mnemonicParsing="false" text="Rektangel" onAction="#RectangleAction" />
+                          <MenuItem mnemonicParsing="false" text="Cirkel"  />
+                          <MenuItem mnemonicParsing="false" text="Linje" onAction="#LineButtonAction" />
+                        </items>
+                      </Menu>
+
+                    </menus>
+                  </MenuBar>
                </children>
             </Pane>
          </children>
