--- a/src/sample.fxml
+++ b/src/sample.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -26,11 +26,11 @@
          <children>
             <Pane prefHeight="478.0" prefWidth="838.0">
                <children>
-                  <Canvas fx:id="canvas" height="413.0" layoutX="14.0" layoutY="47.0" width="643.0" />
-                  <ColorPicker fx:id="ColorPicker" layoutX="569.0" layoutY="22.0" />
-                  <ComboBox layoutX="699.0" layoutY="22.0" prefHeight="25.0" prefWidth="128.0" />
-                  <Slider layoutX="763.0" layoutY="159.0" orientation="VERTICAL" prefHeight="293.0" prefWidth="14.0" />
-                  <MenuBar layoutX="1.0" layoutY="22.0" prefHeight="25.0" prefWidth="568.0">
+                  <Canvas fx:id="canvas" height="392.0" layoutX="14.0" layoutY="47.0" width="761.0" onMouseMoved="#MouseMoveAction" />
+                  <ColorPicker fx:id="ColorPicker" layoutX="568.0" layoutY="10.0" />
+                  <ComboBox layoutX="699.0" layoutY="10.0" prefHeight="25.0" prefWidth="128.0" />
+                  <Slider layoutX="795.0" layoutY="93.0" orientation="VERTICAL" prefHeight="293.0" prefWidth="14.0" />
+                  <MenuBar layoutY="10.0" prefHeight="25.0" prefWidth="568.0">
                     <menus>
                       <Menu mnemonicParsing="false" text="Arkiv">
                         <items>
@@ -40,14 +40,15 @@
                       <Menu mnemonicParsing="false" text="Form">
                         <items>
                           <MenuItem mnemonicParsing="false" text="Ångra" />
-                          <MenuItem mnemonicParsing="false" text="Rektangel" onAction="#RectangleAction" />
-                          <MenuItem mnemonicParsing="false" text="Cirkel"  />
-                          <MenuItem mnemonicParsing="false" text="Linje" onAction="#LineButtonAction" />
+                          <MenuItem mnemonicParsing="false" onAction="#RectangleAction" text="Rektangel" />
+                          <MenuItem mnemonicParsing="false" text="Cirkel" />
+                          <MenuItem mnemonicParsing="false" onAction="#LineButtonAction" text="Linje" />
                         </items>
                       </Menu>
 
                     </menus>
                   </MenuBar>
+                  <Label fx:id="MouseValue" layoutX="14.0" layoutY="439.0" text="X:    Y:" />
                </children>
             </Pane>
          </children>
