--- a/src/sample.fxml
+++ b/src/sample.fxml
@@ -24,18 +24,19 @@
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Pane prefHeight="478.0" prefWidth="838.0">
+             <Pane prefHeight="480.0" prefWidth="850.0">
                <children>
-                  <Canvas fx:id="canvas" height="392.0" layoutX="14.0" layoutY="47.0" width="761.0" onMouseMoved="#MouseMoveAction" />
-                  <ColorPicker fx:id="ColorPicker" layoutX="568.0" layoutY="10.0" />
-                  <ComboBox fx:id="droplist" layoutX="699.0" layoutY="10.0" prefHeight="25.0" prefWidth="128.0" />
+                   <Canvas fx:id="canvas" height="392.0" layoutX="14.0" layoutY="47.0" onMouseMoved="#MouseMoveAction"
+                           width="761.0"/>
+                   <ColorPicker fx:id="ColorPicker" layoutX="567.0" layoutY="-2.0" prefHeight="41.0" prefWidth="130.0"/>
+                   <ComboBox fx:id="droplist" layoutX="697.0" layoutY="-2.0" prefHeight="41.0" prefWidth="154.0"/>
                   <Slider fx:id="slider" layoutX="795.0" layoutY="93.0" orientation="VERTICAL" prefHeight="293.0" prefWidth="14.0" />
-                  <MenuBar layoutY="10.0" prefHeight="25.0" prefWidth="568.0">
+                   <MenuBar layoutY="7.0" prefHeight="32.0" prefWidth="567.0">
                     <menus>
                       <Menu mnemonicParsing="false" text="Arkiv">
                         <items>
                             <MenuItem mnemonicParsing="false" text="Spara till fil"/>
-                            <MenuItem mnemonicParsing="false" text="Avsluta" onAction="#ExitChoice"/>
+                            <MenuItem mnemonicParsing="false" onAction="#ExitChoice" text="Avsluta"/>
                         </items>
                       </Menu>
                       <Menu mnemonicParsing="false" text="Form">
@@ -49,7 +50,7 @@
 
                     </menus>
                   </MenuBar>
-                  <Label fx:id="MouseValue" layoutX="14.0" layoutY="439.0" text="X:    Y:" />
+                   <Label fx:id="MouseValue" layoutX="14.0" layoutY="447.0" text="X:    Y:"/>
                </children>
             </Pane>
          </children>
