--- a/src/sample.fxml
+++ b/src/sample.fxml
@@ -16,22 +16,30 @@
 
 <VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
    <children>
-      <GridPane>
+       <GridPane prefHeight="454.0" prefWidth="987.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+             <ColumnConstraints hgrow="SOMETIMES" maxWidth="781.6000732421875" minWidth="10.0"
+                                prefWidth="734.4000610351562"/>
+             <ColumnConstraints hgrow="SOMETIMES" maxWidth="151.99993896484375" minWidth="10.0"
+                                prefWidth="151.99993896484375"/>
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+             <RowConstraints maxHeight="473.5999755859375" minHeight="10.0" prefHeight="23.600008010864258"
+                             vgrow="SOMETIMES"/>
+             <RowConstraints maxHeight="638.0000183105468" minHeight="10.0" prefHeight="394.7999919891357"
+                             vgrow="SOMETIMES"/>
+             <RowConstraints fillHeight="false" maxHeight="191.20001220703125" minHeight="10.0"
+                             prefHeight="14.999951171875011" vgrow="SOMETIMES"/>
          </rowConstraints>
          <children>
-             <Pane prefHeight="480.0" prefWidth="850.0">
+             <Pane prefHeight="480.0" prefWidth="786.0" GridPane.columnIndex="1">
                <children>
-                   <Canvas fx:id="canvas" height="392.0" layoutX="14.0" layoutY="47.0" onMouseMoved="#MouseMoveAction"
-                           width="761.0"/>
-                   <ColorPicker fx:id="ColorPicker" layoutX="567.0" layoutY="-2.0" prefHeight="41.0" prefWidth="130.0"/>
-                   <ComboBox fx:id="droplist" layoutX="697.0" layoutY="-2.0" prefHeight="41.0" prefWidth="154.0"/>
-                  <Slider fx:id="slider" layoutX="795.0" layoutY="93.0" orientation="VERTICAL" prefHeight="293.0" prefWidth="14.0" />
-                   <MenuBar layoutY="7.0" prefHeight="32.0" prefWidth="567.0">
+                   <Canvas fx:id="canvas" height="392.0" layoutY="47.0" onMouseMoved="#MouseMoveAction" width="775.0"/>
+                   <ColorPicker fx:id="ColorPicker" layoutX="567.0" layoutY="-2.0" prefHeight="31.0" prefWidth="170.0"/>
+                   <Slider fx:id="slider" layoutX="797.0" layoutY="114.0" orientation="VERTICAL" prefHeight="293.0"
+                           prefWidth="14.0" value="50"/>
+                   <MenuBar layoutX="-100.0" layoutY="-2.0" prefHeight="31.0" prefWidth="666.0">
                     <menus>
                       <Menu mnemonicParsing="false" text="Arkiv">
                         <items>
@@ -50,9 +58,11 @@
 
                     </menus>
                   </MenuBar>
-                   <Label fx:id="MouseValue" layoutX="14.0" layoutY="447.0" text="X:    Y:"/>
                </children>
             </Pane>
+             <ComboBox fx:id="droplist" prefHeight="27.0" prefWidth="152.0" GridPane.columnIndex="2"/>
+             <Label fx:id="MouseValue" text="X:    Y:" GridPane.halignment="CENTER" GridPane.rowIndex="2"
+                    GridPane.valignment="BOTTOM"/>
          </children>
       </GridPane>
    </children>
