--- a/src/sample.fxml
+++ b/src/sample.fxml
@@ -1,20 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.ColorPicker?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
    <children>
        <GridPane prefHeight="454.0" prefWidth="987.0">
@@ -55,7 +43,8 @@
                     </menus>
                   </MenuBar>
                    <ToggleButton fx:id="toggle" layoutX="488.0" layoutY="1.0" mnemonicParsing="false"
-                                 onMouseClicked="#creationOkOrNot" prefHeight="25.0" prefWidth="79.0" text="Markera"/>
+                                 onMouseClicked="#creationOkOrNot" prefHeight="25.0" prefWidth="79.0" selected="true"
+                                 text="Skapa"/>
                </children>
             </Pane>
              <ComboBox fx:id="droplist" prefHeight="25.0" prefWidth="127.0" GridPane.columnIndex="2"
