--- a/src/sample.fxml
+++ b/src/sample.fxml
@@ -22,30 +22,32 @@
          <children>
              <Pane prefHeight="480.0" prefWidth="786.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                   <Canvas fx:id="canvas" height="392.0" layoutX="-90.0" layoutY="47.0" onMouseMoved="#MouseMoveAction"
+                   <Canvas fx:id="canvas" height="392.0" layoutX="-90.0" layoutY="47.0" onMouseMoved="#mouseMoveAction"
                            width="865.0"/>
-                   <ColorPicker fx:id="colorPicker" layoutX="567.0" layoutY="-2.0" prefHeight="27.0" prefWidth="192.0"
-                                onShowing="#colorChanged"/>
-                   <MenuBar layoutX="-99.0" prefHeight="26.0" prefWidth="588.0">
+                   <ColorPicker fx:id="colorPicker" layoutX="567.0" layoutY="-2.0" onShowing="#colorChanged"
+                                prefHeight="27.0" prefWidth="192.0"/>
+                   <ToggleButton fx:id="toggle" layoutX="488.0" layoutY="1.0" mnemonicParsing="false"
+                                 onMouseClicked="#creationOkOrNot" prefHeight="25.0" prefWidth="79.0" selected="true"
+                                 text="Skapa"/>
+                   <MenuBar layoutX="-101.0" layoutY="-2.0" prefHeight="28.0" prefWidth="510.0">
                     <menus>
                       <Menu mnemonicParsing="false" text="Arkiv">
                         <items>
                             <MenuItem mnemonicParsing="false" onAction="#saveFileDialog" text="Spara till fil"/>
-                            <MenuItem mnemonicParsing="false" onAction="#ExitChoice" text="Avsluta"/>
+                            <MenuItem mnemonicParsing="false" onAction="#exitChoice" text="Avsluta"/>
                         </items>
                       </Menu>
                         <Menu fx:id="shapeChoiceMenu" mnemonicParsing="false" text="Form">
                         <items>
-                          <MenuItem mnemonicParsing="false" onAction="#RectangleAction" text="Rektangel" />
-                            <MenuItem mnemonicParsing="false" onAction="#CircleAction" text="Cirkel"/>
+                            <MenuItem mnemonicParsing="false" onAction="#rectangleAction" text="Rektangel"/>
+                            <MenuItem mnemonicParsing="false" onAction="#circleAction" text="Cirkel"/>
                         </items>
                       </Menu>
-                        <Menu mnemonicParsing="false" text="Ångra"/>
                     </menus>
-                  </MenuBar>
-                   <ToggleButton fx:id="toggle" layoutX="488.0" layoutY="1.0" mnemonicParsing="false"
-                                 onMouseClicked="#creationOkOrNot" prefHeight="25.0" prefWidth="79.0" selected="true"
-                                 text="Skapa"/>
+
+                   </MenuBar>
+                   <Button layoutX="409.0" layoutY="1.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0"
+                           text="Ångra" onAction="#undoRequestFromMenu"/>
                </children>
             </Pane>
              <ComboBox fx:id="droplist" prefHeight="25.0" prefWidth="127.0" GridPane.columnIndex="2"
@@ -54,9 +56,9 @@
                     GridPane.valignment="BOTTOM"/>
              <Label text="Storlek" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS"
                     GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS"/>
-             <Slider fx:id="slider" orientation="VERTICAL" prefHeight="328.0" prefWidth="14.0" value="50"
-                     GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3"
-                     GridPane.valignment="CENTER" onMousePressed="#SizeChanged"/>
+             <Slider fx:id="slider" onMousePressed="#sizeChanged" onMouseReleased="#sizeChanged" orientation="VERTICAL"
+                     prefHeight="328.0" prefWidth="14.0" value="50" GridPane.columnIndex="2"
+                     GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER"/>
          </children>
       </GridPane>
    </children>
